--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -34,8 +34,7 @@
 				<div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
 
 					<div class="menu_section">
-						<h3>
-							<div sec:authentication="principal.profile">profilo</div>
+						<h3 class="profile" sec:authentication="principal.profile">
 						</h3>
 						<ul class="nav side-menu">
 							<!-- li th:if="${#authorization.expression('hasAuthority(''PROVIDER_READ'')')}" -->
@@ -104,7 +103,7 @@
 		                <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
 		                  <img src="../static/gentella/images/user.png" th:src="@{/gentella/images/user.png}" alt="..." />
 							<span sec:authentication="name" th:remove="tag">username</span>
-		                  <span class=" fa fa-angle-down"></span>
+		                  <i class=" fa fa-angle-down"></i>
 		                </a>
 		                <ul class="dropdown-menu dropdown-usermenu animated fadeInDown pull-right">
 		                  <li>
