--- a/src/main/resources/templates/fragments/allegati.html
+++ b/src/main/resources/templates/fragments/allegati.html
@@ -97,6 +97,7 @@
 				case 'pianoQualita' : 					tipoAllegato = 'FILE_PIANO_QUALITA'; break;
 				case 'dichiarazioneLegale' : 			tipoAllegato = 'FILE_DICHIARAZIONE_LEGALE'; break;
 				case 'dichiarazioneEsclusione' : 		tipoAllegato = 'FILE_DICHIARAZIONE_ESCLUSIONE'; break;
+				case 'verbaleValutazioneSulCampo' : 	tipoAllegato = 'FILE_VERBALE_VALUTAZIONE_SUL_CAMPO'; break;
 
 				//File da firmare per engineering
 				case 'fileDaFirmare' :					tipoAllegato = 'FILE_DA_FIRMARE'; break;
@@ -145,7 +146,8 @@
 						case 'FILE_PIANO_QUALITA' : 				inputName = 'pianoQualita'; break;
 						case 'FILE_DICHIARAZIONE_LEGALE' : 			inputName = 'dichiarazioneLegale'; break;
 						case 'FILE_DICHIARAZIONE_ESCLUSIONE' : 		inputName = 'dichiarazioneEsclusione'; break;
-
+						case 'FILE_VERBALE_VALUTAZIONE_SUL_CAMPO' : inputName = 'verbaleValutazioneSulCampo'; break;
+						
 						//File da firmare per engineering
 						case 'FILE_DA_FIRMARE' :					inputName = 'fileDaFirmare'; break;
 					default: break;
