Fix all'append delle query in selezione e ripristinato vecchio "FULL"

--- a/src/main/resources/templates/accreditamento/accreditamentoEdit.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoEdit.html
@@ -90,6 +90,7 @@
 				function setEditURLs(ruolo) {
 					$('#nuova_anagrafica').prop('href', [[@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=|}]]+ruolo);
 					var table = $('#tabella-modale').DataTable();
+					table.clear();
 					$.get( "/provider/" + [[${accreditamentoWrapper.provider.id}]] + "/anagraficaList", function(data){
 						var start = [[@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/|}]];
 
